Added more responsive text

--- a/port.css
+++ b/port.css
@@ -413,6 +413,7 @@ animation-delay:.2s;}
     #sql6{display: none;}
     .thirdproject {margin-top: 150px; height: 130vh;}
     #doodle{bottom: -30;}
+    .card-text {width: 100%;}
 }
   
 
